# go/pkg/server/gateway.go
@@ -3,7 +3,9 @@ package server
 import (
 	"bytes"
 	"context"
+	"crypto/tls"
 	"encoding/json"
+	"fmt"
 	"io"
 	"log/slog"
 	"net/http"
@@ -16,7 +18,9 @@ import (
 	"github.com/shibukazu/open-ve/go/pkg/appError"
 	"github.com/shibukazu/open-ve/go/pkg/config"
 	"github.com/shibukazu/open-ve/go/pkg/dsl/reader"
+	"github.com/shibukazu/open-ve/go/pkg/slave"
 	pbDSL "github.com/shibukazu/open-ve/go/proto/dsl/v1"
+	pbSlave "github.com/shibukazu/open-ve/go/proto/slave/v1"
 	pbValidate "github.com/shibukazu/open-ve/go/proto/validate/v1"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/credentials"
@@ -24,24 +28,30 @@ import (
 )
 
 type Gateway struct {
-	httpConfig *config.HttpConfig
-	gRPCConfig *config.GRPCConfig
-	logger     *slog.Logger
-	dslReader  *reader.DSLReader
-	server     *http.Server
+	mode         string
+	httpConfig   *config.HttpConfig
+	gRPCConfig   *config.GRPCConfig
+	logger       *slog.Logger
+	dslReader    *reader.DSLReader
+	slaveManager *slave.SlaveManager
+	server       *http.Server
 }
 
 func NewGateway(
+	mode string,
 	httpConfig *config.HttpConfig,
 	gRPCConfig *config.GRPCConfig,
 	logger *slog.Logger,
 	dslReader *reader.DSLReader,
+	slaveManager *slave.SlaveManager,
 ) *Gateway {
 	return &Gateway{
-		httpConfig: httpConfig,
-		gRPCConfig: gRPCConfig,
-		logger:     logger,
-		dslReader:  dslReader,
+		mode:         mode,
+		httpConfig:   httpConfig,
+		gRPCConfig:   gRPCConfig,
+		logger:       logger,
+		dslReader:    dslReader,
+		slaveManager: slaveManager,
 	}
 }
 
@@ -63,15 +73,21 @@ func (g *Gateway) Run(ctx context.Context, wg *sync.WaitGroup) {
 		dialOpts = append(dialOpts, grpc.WithTransportCredentials(insecure.NewCredentials()))
 	}
 
-	if err := pbValidate.RegisterValidateServiceHandlerFromEndpoint(ctx, grpcGateway, g.gRPCConfig.Addr, dialOpts); err != nil {
+	if err := pbValidate.RegisterValidateServiceHandlerFromEndpoint(ctx, grpcGateway, ":"+g.gRPCConfig.Port, dialOpts); err != nil {
 		panic(failure.Translate(err, appError.ErrServerStartFailed, failure.Messagef("failed to register validate service on gateway")))
 	}
 
-	if err := pbDSL.RegisterDSLServiceHandlerFromEndpoint(ctx, grpcGateway, g.gRPCConfig.Addr, dialOpts); err != nil {
+	if err := pbDSL.RegisterDSLServiceHandlerFromEndpoint(ctx, grpcGateway, ":"+g.gRPCConfig.Port, dialOpts); err != nil {
 		panic(failure.Translate(err, appError.ErrServerStartFailed, failure.Messagef("failed to register dsl service on gateway")))
 	}
 
-	withMiddleware := g.validateRequestTypeConvertMiddleware(grpcGateway)
+	if g.mode == "master" {
+		if err := pbSlave.RegisterSlaveServiceHandlerFromEndpoint(ctx, grpcGateway, ":"+g.gRPCConfig.Port, dialOpts); err != nil {
+			panic(failure.Translate(err, appError.ErrServerStartFailed, failure.Messagef("failed to register slave service on gateway")))
+		}
+	}
+
+	withMiddleware := g.forwardCheckRequestMiddleware(g.validateRequestTypeConvertMiddleware(grpcGateway))
 
 	withCors := cors.New(cors.Options{
 		AllowedOrigins:   g.httpConfig.CORSAllowedOrigins,
@@ -82,7 +98,7 @@ func (g *Gateway) Run(ctx context.Context, wg *sync.WaitGroup) {
 	}).Handler(withMiddleware)
 
 	g.server = &http.Server{
-		Addr:    g.httpConfig.Addr,
+		Addr:    ":" + g.httpConfig.Port,
 		Handler: withCors,
 	}
 
@@ -120,6 +136,195 @@ func (g *Gateway) shutdown(ctx context.Context) {
 		g.logger.Error(failure.Translate(err, appError.ErrServerShutdownFailed).Error())
 	}
 	g.logger.Info("🛑 gateway server is stopped")
+}
+
+type responseRecorder struct {
+	http.ResponseWriter
+	statusCode int
+	body       *bytes.Buffer
+}
+
+func (rec *responseRecorder) WriteHeader(code int) {
+	rec.statusCode = code
+}
+
+func (rec *responseRecorder) Write(b []byte) (int, error) {
+	return rec.body.Write(b)
+}
+
+func (g *Gateway) forwardCheckRequestMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		if g.mode == "master" && r.URL.Path == "/v1/check" && r.Method == "POST" {
+			ctx := context.Background()
+			modifiedRequestValidations := make([]interface{}, 0)
+			validationResults := make([]interface{}, 0)
+
+			var reqBody map[string]interface{}
+			var resBody map[string]interface{}
+			if err := json.NewDecoder(r.Body).Decode(&reqBody); err != nil {
+				http.Error(w, failure.Translate(err, appError.ErrRequestParameterInvalid).Error(), http.StatusBadRequest)
+				return
+			}
+
+			validations, ok := reqBody["validations"].([]interface{})
+			if !ok {
+				http.Error(w, failure.New(appError.ErrRequestParameterInvalid, failure.Messagef("validations field is invalid")).Error(), http.StatusBadRequest)
+				return
+			}
+
+			dslFound := false
+			dsl, err := g.dslReader.Read(ctx)
+			if err == nil {
+				dslFound = true
+			}
+
+			ch := make(chan []interface{})
+			errCh := make(chan error)
+			numForwarded := 0
+			for _, validation := range validations {
+				validation, ok := validation.(map[string]interface{})
+				if !ok {
+					http.Error(w, failure.New(appError.ErrRequestParameterInvalid, failure.Messagef("validation field is invalid")).Error(), http.StatusBadRequest)
+					return
+				}
+				id, ok := validation["id"].(string)
+				if !ok {
+					http.Error(w, failure.New(appError.ErrRequestParameterInvalid, failure.Messagef("id field is invalid")).Error(), http.StatusBadRequest)
+					return
+				}
+
+				// Check if the request forward is needed
+				isForwardNeed := true
+				if dslFound {
+					for _, validation := range dsl.Validations {
+						if validation.ID == id {
+							isForwardNeed = false
+							break
+						}
+					}
+				}
+
+				if isForwardNeed {
+					numForwarded++
+					go func(id string, ch chan []interface{}) {
+						// Find the slave node that can handle validation ID
+						slaveNode, err := g.slaveManager.FindSlave(id)
+						if err != nil {
+							errCh <- err
+							return
+						}
+
+						var client *http.Client
+						if slaveNode.TLSEnabled {
+							transport := &http.Transport{
+								TLSClientConfig: &tls.Config{},
+							}
+							client = &http.Client{Transport: transport}
+						} else {
+							client = &http.Client{}
+						}
+						client.Timeout = 5 * time.Second
+
+						reqBody := map[string]interface{}{
+							"validations": []interface{}{validation},
+						}
+						body, err := json.Marshal(reqBody)
+						if err != nil {
+							errCh <- failure.Translate(err, appError.ErrValidateServiceForwardFailed)
+							return
+						}
+						req, err := http.NewRequest("POST", slaveNode.Addr+"/v1/check", bytes.NewBuffer(body))
+						if err != nil {
+							errCh <- failure.Translate(err, appError.ErrValidateServiceForwardFailed)
+							return
+						}
+						req.Header.Set("Content-Type", "application/json")
+
+						resp, err := client.Do(req)
+						if err != nil {
+							errCh <- failure.Translate(err, appError.ErrValidateServiceForwardFailed)
+							return
+						}
+						defer resp.Body.Close()
+
+						if resp.StatusCode != http.StatusOK {
+							errCh <- failure.New(appError.ErrValidateServiceForwardFailed, failure.Messagef("Failed to forward the validate request to slave: %d", resp.StatusCode))
+							return
+						}
+
+						var respBody map[string]interface{}
+						if err := json.NewDecoder(resp.Body).Decode(&respBody); err != nil {
+							errCh <- failure.Translate(err, appError.ErrValidateServiceForwardFailed)
+							return
+						}
+						results, ok := respBody["results"].([]interface{})
+						if !ok {
+							errCh <- failure.New(appError.ErrRequestParameterInvalid, failure.Messagef("results field is invalid"))
+							return
+						}
+						ch <- results
+						g.logger.Info(fmt.Sprintf("⚽️ Request (id:%s) Forwarded to Slave %s", id, slaveNode.Id))
+					}(id, ch)
+				} else {
+					modifiedRequestValidations = append(modifiedRequestValidations, validation)
+				}
+			}
+
+			for i := 0; i < numForwarded; i++ {
+				select {
+				case err := <-errCh:
+					http.Error(w, err.Error(), http.StatusInternalServerError)
+					return
+				case results := <-ch:
+					validationResults = append(validationResults, results...)
+				case <-time.After(30 * time.Second):
+					http.Error(w, failure.New(appError.ErrValidateServiceForwardFailed, failure.Message("Timeout")).Error(), http.StatusInternalServerError)
+				}
+			}
+
+			reqBody["validations"] = modifiedRequestValidations
+			modifiedReqBody, err := json.Marshal(reqBody)
+			if err != nil {
+				http.Error(w, failure.Translate(err, appError.ErrRequestParameterInvalid).Error(), http.StatusInternalServerError)
+				return
+			}
+			r.Body = io.NopCloser(bytes.NewBuffer(modifiedReqBody))
+			r.ContentLength = int64(len(modifiedReqBody))
+
+			rec := &responseRecorder{
+				ResponseWriter: w,
+				body:           &bytes.Buffer{},
+			}
+			next.ServeHTTP(rec, r)
+
+			// Concat the validation results
+			if err := json.Unmarshal(rec.body.Bytes(), &resBody); err != nil {
+				http.Error(w, failure.Translate(err, appError.ErrRequestParameterInvalid).Error(), http.StatusInternalServerError)
+				return
+			}
+			originalValidationResults, ok := resBody["results"].([]interface{})
+			if !ok {
+				http.Error(w, failure.New(appError.ErrRequestParameterInvalid, failure.Messagef("results field is invalid")).Error(), http.StatusInternalServerError)
+				return
+			}
+			resBody["results"] = append(originalValidationResults, validationResults...)
+			resBodyJson, err := json.Marshal(resBody)
+			if err != nil {
+				http.Error(w, failure.Translate(err, appError.ErrRequestParameterInvalid).Error(), http.StatusInternalServerError)
+				return
+			}
+
+			w.Header().Set("Content-Type", "application/json")
+			w.Header().Set("Content-Length", fmt.Sprint(len(resBodyJson)))
+			w.WriteHeader(http.StatusOK)
+			_, err = w.Write(resBodyJson)
+			if err != nil {
+				g.logger.Error(failure.Translate(err, appError.ErrServerInternalError).Error())
+			}
+		} else {
+			next.ServeHTTP(w, r)
+		}
+	})
 }
 
 func (g *Gateway) validateRequestTypeConvertMiddleware(next http.Handler) http.Handler {
